fix auth opt